table con texto -index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <H1>TITULO DE INDEX PRINCIPAL</H1>
+
+    <table>
+        <tr>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </tr>
+    </table>
 </body>
 </html>
