tabla en contacto linea 14 al 17

--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,11 @@
     <h2>CONTACTO</h2>
     <p>Lorem ipsum dolor sit.</p>
     <p>loreddsfdsf</p>
+    <table>
+        <tr>
+            sdfdsf
+        </tr>
+        <tr>gfdgfd</tr>
+    </table>
 </body>
 </html>
